5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1680_1950.log
== TEST (2019-04-24 00:27:50) 
-- CODE:
tempo=int(input("anos:   ?"))
print('carro novo' if tempo<=3 else 'carro velho')
print('Fim')
-- OUTPUT:
carro velho
Fim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:28:00) 
-- CODE:
tempo=int(input("anos:   ?"))
print('carro novo' if tempo<=3 else 'carro velho')
print('Fim')
-- OUTPUT:
carro velho
Fim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:28:04) 
-- CODE:
tempo=int(input("anos:   ?"))
print('carro novo' if tempo<=3 else 'carro velho')
print('Fim')
-- OUTPUT:
carro velho
Fim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:28:17) 
-- CODE:
tempo=int(input("anos:   ?"))
print('carro novo' if tempo<=3 else 'carro velho')
	print('Fim')
-- ERROR:
File "XXXX", line 3
    print('Fim')
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:28:52) 
-- CODE:
tempo=int(input("anos:   ?"))
print('carro novo' if tempo<=3 else 'carro velho')
print('Fim')
-- OUTPUT:
carro velho
Fim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:39:45) 
-- CODE:
a=float(input('digite sua primeira nota:  '))
b=float(input('difige sua segunda nota:   '))
m=(a+b)/2
print(m if m>=8 else "voce foi reprovado")

-- OUTPUT:
14.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:40:11) 
-- CODE:
a=float(input('digite sua primeira nota:  '))
b=float(input('difige sua segunda nota:   '))
m=(a+b)/2
print(m if m>=8 else "voce foi reprovado")

-- OUTPUT:
14.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:40:26) 
-- CODE:
a=float(input('digite sua primeira nota:  '))
b=float(input('difige sua segunda nota:   '))
m=(a+b)/2
print(m if m>=8 else "voce foi reprovado!!Estudo muito mais")

-- OUTPUT:
14.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:40:35) 
-- CODE:
a=float(input('digite sua primeira nota:  '))
b=float(input('difige sua segunda nota:   '))
m=(a+b)/2
print(m if m>=8 else "voce foi reprovado!!Estude muito mais")

-- OUTPUT:
14.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:44:17) 
-- CODE:
a=float(input('digite sua primeira nota:  '))
b=float(input('difige sua segunda nota:   '))
m=(a+b)/2
print(' sua media foi m ')
if (m>=7):
	print('aprovado')
else:
	print('reprovado')
-- OUTPUT:
sua media foi m 
aprovado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:44:26) 
-- CODE:
a=float(input('digite sua primeira nota:  '))
b=float(input('difige sua segunda nota:   '))
m=(a+b)/2
print(' sua media foi m ')
if (m>=7):
	print('aprovado')
else:
	print('reprovado')
-- OUTPUT:
sua media foi m 
aprovado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:44:44) 
-- CODE:
a=float(input('digite sua primeira nota:  '))
b=float(input('difige sua segunda nota:   '))
m=(a+b)/2

if (m>=7):
	print('aprovado')
else:
	print('reprovado')
-- OUTPUT:
aprovado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:15:10) 
-- CODE:
a=float(input('digite sua primeira nota:  '))
b=float(input('difige sua segunda nota:   '))
m=(a+b)/2

if (m>=7):
	print('aprovado')
else:
	print('reprovado')
-- OUTPUT:
aprovado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 01:15:23) 
-- CODE:
a=float(input('digite sua primeira nota:  '))
b=float(input('difige sua segunda nota:   '))
m=(a+b)/2

if (m>=7):
	print('aprovado')
else:
	print('reprovado')
-- OUTPUT:
aprovado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
